turbopack/crates/turbo-tasks-macros-tests/tests/function/fail_operation_method_self_type.stderr
error: methods taking `self` are not supported with `operation`
  --> tests/function/fail_operation_method_self_type.rs:13:28
   |
13 |     fn arbitrary_self_type(self: OperationVc<Self>) -> Vc<()> {
   |                            ^^^^^^^^^^^^^^^^^^^^^^^

error[E0307]: invalid `self` parameter type: `OperationVc<Foobar>`
  --> tests/function/fail_operation_method_self_type.rs:13:34
   |
13 |     fn arbitrary_self_type(self: OperationVc<Self>) -> Vc<()> {
   |                                  ^^^^^^^^^^^^^^^^^
   |
   = note: type of `self` must be `Self` or a type that dereferences to it
   = help: consider changing to `self`, `&self`, `&mut self`, `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`)

error[E0277]: the trait bound `Foobar: NonLocalValue` is not satisfied
  --> tests/function/fail_operation_method_self_type.rs:13:34
   |
13 |     fn arbitrary_self_type(self: OperationVc<Self>) -> Vc<()> {
   |                                  ^^^^^^^^^^^^^^^^^ the trait `NonLocalValue` is not implemented for `Foobar`, which is required by `OperationVc<Foobar>: NonLocalValue`
   |
   = help: the following other types implement trait `NonLocalValue`:
             &T
             &mut T
             ()
             (A, Z, Y, X, W, V, U, T)
             (B, A, Z, Y, X, W, V, U, T)
             (C, B, A, Z, Y, X, W, V, U, T)
             (D, C, B, A, Z, Y, X, W, V, U, T)
             (E, D, C, B, A, Z, Y, X, W, V, U, T)
           and $N others
   = note: required for `OperationVc<Foobar>` to implement `NonLocalValue`
note: required by a bound in `assert_argument_is_non_local_value`
  --> $WORKSPACE/turbopack/crates/turbo-tasks/src/macro_helpers.rs
   |
   | pub fn assert_argument_is_non_local_value<Argument: NonLocalValue>() {}
   |                                                     ^^^^^^^^^^^^^ required by this bound in `assert_argument_is_non_local_value`
